# PluginPipeline

./: .gitignore  CMakeLists.txt  README.md  api.h  main.cpp
methods/2double/: 2double.cpp  CMakeLists.txt
methods/double/: CMakeLists.txt  double.c  double.cpp
methods/quarter/: CMakeLists.txt  quarter.c  quarter.cpp
methods/square/: CMakeLists.txt  square.c  square.cpp
